fix: + Sửa lỗi dữ liệu nếu import lần đầu sau đó import tiếp thêm 1 lần nữa rồi gửi thì lỗi => do bị ghi đè css : + ẩn overflow phần zoom dialog + set lại height, width mặc định cho container chứa ảnh + set lại height cho listmission trong modal xem dữ liệu

--- a/src/features/FlightManage/FlightManageModal/css/FlightManageModalMissionData.css
+++ b/src/features/FlightManage/FlightManageModal/css/FlightManageModalMissionData.css
@@ -6,7 +6,7 @@
   border-left: 1px solid black;
   border-right: 1px solid black;
   overflow-y: auto;
-  height: 94.5%;
+  height: calc(100vh - 84px);
 }
 
 .list-mission-items__container {
@@ -107,6 +107,8 @@
 
 .modal-mission-data__img-list-items-label {
   position: relative;
+  width: 708.45px;
+  height: 405px;
 }
 
 .modal-mission-data__img-list-items-label:hover {
@@ -117,7 +119,7 @@
   margin-top: 5px !important;
 }
 
-@media (max-width: 760px)  {
+@media (max-width: 760px) {
   .modal-mission-data__img-list-items-container {
     position: relative;
     overflow-y: hidden !important;
