--- a/src/features/MainFlight/css/MainFlightDialogAfterFly.css
+++ b/src/features/MainFlight/css/MainFlightDialogAfterFly.css
@@ -79,6 +79,8 @@
 
 .modal-afterfly__img-list-items-label {
   position: relative;
+  width: 708.45px;
+  height: 405px;
 }
 
 .modal-afterfly__img-list-items-label:hover {
